templates/vpc/build/vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "VPC environment for SageMaker-guard",
  "Parameters": {
    "LogsBucketArn": {
      "Type": "String",
      "Default": "EMPTY"
    },
    "VPCEndpoints": {
      "Type": "String",
      "Default": "EMPTY"
    },
    "CidrBlock": {
      "Type": "String",
      "Default": "EMPTY"
    },
    "EnableVPCEndpoints": {
      "Type": "String",
      "Default": "EMPTY"
    }
  },
  "Conditions": {
    "IfLogsBucketArn": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "LogsBucketArn"
            },
            "EMPTY"
          ]
        }
      ]
    },
    "IfVPCEndpoints": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "VPCEndpoints"
            },
            "EMPTY"
          ]
        }
      ]
    },
    "IfCidrBlock": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "CidrBlock"
            },
            "EMPTY"
          ]
        }
      ]
    },
    "IfEnableVPCEndpoints": {
      "Fn::Equals": [
        {
          "Ref": "EnableVPCEndpoints"
        },
        "ENABLE"
      ]
    }
  },
  "Outputs": {
    "Subnet": {
      "Value": {
        "Ref": "subnet1"
      }
    },
    "NoteBookSecurityGroup": {
      "Value": {
        "Ref": "NoteBookSecurityGroup"
      }
    },
    "EFS": {
      "Value": {
        "Ref": "EFS"
      }
    },
    "VPC": {
      "Value": {
        "Ref": "VPC"
      }
    }
  },
  "Resources": {
    "EFS": {
      "Type": "AWS::EFS::FileSystem",
      "Properties": {}
    },
    "EFSMount": {
      "Type": "AWS::EFS::MountTarget",
      "DependsOn": [
        "subnet1",
        "EFSSecurityGroup"
      ],
      "Properties": {
        "FileSystemId": {
          "Ref": "EFS"
        },
        "SecurityGroups": [
          {
            "Ref": "EFSSecurityGroup"
          }
        ],
        "SubnetId": {
          "Ref": "subnet1"
        }
      }
    },
    "EFSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "DependsOn": [
        "subnet1"
      ],
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "Allow Access",
        "SecurityGroupIngress": [
          {
            "FromPort": "2049",
            "ToPort": "2049",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::GetAtt": [
                "NoteBookSecurityGroup",
                "GroupId"
              ]
            }
          }
        ]
      }
    },
    "NoteBookSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "DependsOn": [
        "subnet1"
      ],
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "Allow Access",
        "SecurityGroupIngress": []
      }
    },
    "NoteBookSecurityGroupIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "NoteBookSecurityGroup",
            "GroupId"
          ]
        },
        "FromPort": "443",
        "ToPort": "443",
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "EndpointSecurityGroup",
            "GroupId"
          ]
        }
      }
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "CidrBlock"
        },
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "SubnetPublicAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        },
        "SubnetId": {
          "Ref": "subnet1"
        }
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "CidrBlock"
        },
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "VPCS3Endpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "RouteTableIds": [
          {
            "Ref": "RouteTable"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.s3"
        },
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "s3:*"
              ],
              "Resource": [
                "*"
              ]
            }
          ]
        }
      }
    },
    "VPCSSMEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.ssm"
        }
      }
    },
    "VPCEC2MessagesEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.ec2messages"
        }
      }
    },
    "VPCEC2Endpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.ssmmessages"
        }
      }
    },
    "VPCSSMMessagesEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.ssmmessages"
        }
      }
    },
    "VPCSageMakerEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.sagemaker.api"
        }
      }
    },
    "VPCSageMakerRuntimeEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.sagemaker.runtime"
        }
      }
    },
    "VPCLogsEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Condition": "IfEnableVPCEndpoints",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": false,
        "SubnetIds": [
          {
            "Ref": "subnet1"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.logs"
        }
      }
    },
    "EndpointSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "Allow Access",
        "SecurityGroupIngress": [
          {
            "FromPort": "443",
            "ToPort": "443",
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::GetAtt": [
                "NoteBookSecurityGroup",
                "GroupId"
              ]
            }
          }
        ]
      }
    },
    "FlowLog": {
      "Type": "AWS::EC2::FlowLog",
      "Properties": {
        "LogDestination": {
          "Fn::Sub": "${LogsBucketArn}/vpc"
        },
        "LogDestinationType": "s3",
        "ResourceId": {
          "Ref": "VPC"
        },
        "ResourceType": "VPC",
        "TrafficType": "ALL"
      }
    }
  }
}
